# kokone-music-for-mobile

./: .gitignore  CLAUDE.md  LICENSE  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.claude/: settings.local.json
public/json/: translation.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: android.json  default.json
src-tauri/icons/: icon.icns
src-tauri/src/: android_media.rs  audio_analysis.rs  edit_track.rs  get_lang.rs  historySender.rs  lib.rs  main.rs  music_playback.rs  scan_music.rs  settings.rs
src/css/: app.css  default.css
src/css/components/: AlbumItem.css  ArtistItem.css  EditInfoModal.css  ItemActionsMenu.css  Message.css  MiniPlayer.css  MusicItem.css  PlaylistItem.css  ScanMessage.css  Select.css  TagsItem.css
src/css/pages/: AlbumDetailsPage.css  ArtistPage.css  ArtistlistsPage.css  ArtistsDetailsPage.css  LibraryPage.css  PlaylistsDetailsPage.css  PlaylistsPage.css  SettingsPage.css  TagsDetailsPage.css  TagsPage.css
src/ts/: App.tsx  SettingsLayout.tsx  main.tsx  router.tsx
src/ts/components/: AlbumItem.tsx  ArtistItem.tsx  ColorPicker.tsx  ColoredSvg.tsx  EditInfoModal.tsx  Icon.tsx  ListIcon.tsx  (+9 more)
tauri-plugin-android-media/: Cargo.toml  build.rs  package.json  tsconfig.json
tauri-plugin-android-media/android/: build.gradle.kts
tauri-plugin-android-media/android/src/main/: AndroidManifest.xml
tauri-plugin-android-media/android/src/main/java/: AndroidMediaPlugin.kt
tauri-plugin-android-media/android/src/main/java/moe/coiluck/kokone_music/androidmedia/: MusicPlaybackService.kt
tauri-plugin-android-media/dist-js/: index.cjs  index.d.ts  index.js
tauri-plugin-android-media/guest-js/: index.ts
tauri-plugin-android-media/permissions/: default.toml
tauri-plugin-android-media/permissions/autogenerated/: reference.md
tauri-plugin-android-media/permissions/autogenerated/commands/: audio_hash.toml  has_audio_permission.toml  prepare-audio.toml  query_audio_metadata.toml  request_audio_permission.toml
tauri-plugin-android-media/permissions/schemas/: schema.json
tauri-plugin-android-media/src/: commands.rs  desktop.rs  error.rs  lib.rs  mobile.rs  models.rs
(+33 files in other folders)
