[package]
name = "kokone-music"
version = "0.1.0"
description = "A Tauri App"
authors = ["coilcuk"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "kokone_music_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# lang
sys-locale = "0.3"

# scan_music.rs で使用
tokio       = { version = "1", features = ["full"] }
walkdir     = "2"
lofty       = "0.21"
rusqlite    = { version = "0.31", features = ["bundled"] }
log         = "0.4"

# audio_analysis.rs で使用
symphonia = { version = "0.5", features = ["mp3", "aac", "ogg", "wav", "flac"] }
ebur128 = "0.1"
sha2 = "0.10"
rayon = "1"
num_cpus = "1"

# Android 専用: MediaStore を Kotlin プラグイン経由で叩く
tauri-plugin-android-media = { path = "../tauri-plugin-android-media" }
tauri-plugin-os = "2.3.2"

# 曲データを cloudflare D1に送るときのため
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
