[package]
name = "tauri-plugin-android-media"
version = "0.1.0"
authors = ["coilcuk"]
description = "Tauri plugin to query Android MediaStore audio metadata and compute audio hashes."
edition = "2021"
rust-version = "1.77.2"
exclude = ["/examples", "/dist-js", "/guest-js", "/node_modules"]
links = "tauri-plugin-android-media"

[dependencies]
tauri = { version = "2" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
log = "0.4"

[build-dependencies]
tauri-plugin = { version = "2", features = ["build"] }
